# FaceSwap-1

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dongnao/faceswap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceSwap.cpp  FaceSwap.hpp  common.hpp  native-lib.cpp
app/src/main/java/com/dongnao/faceswap/: MainActivity.java  SwapHelper.java  SwapSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/dongnao/faceswap/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
